fix: fixing size, weight and spacing

--- a/src/app.module.scss
+++ b/src/app.module.scss
@@ -92,7 +92,7 @@ body {
   margin: 120px 0;
 }
 
-@media screen and (min-width: 360px) and (max-width: 425px){
+@media screen and (max-width: 500px){
   body{
     overflow-x: hidden;
   }
@@ -100,15 +100,15 @@ body {
   .foto{
     max-width: 100%;
   }
-}
 
-@media screen and (max-width: 425px){
-  body{
-    width: 100%;
-  }
+  .tituloSquad{
+    font-weight: 400;
+    font-size: 26px;
+    margin: 23px 0 29px 0;
 
-  .foto{
-    max-width: 100%;
+    .destaque{
+      font-weight: 800;
+    }
   }
 }
 
